#
# This file is part of the BlizzLikeCore Project. See CREDITS and LICENSE files
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#

set(ACE_STAT_SRCS
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/ACE.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/ACE_crc32.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/ACE_crc_ccitt.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/ace_wchar.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Activation_Queue.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Active_Map_Manager.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Addr.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Argv_Type_Converter.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Assert.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Asynch_IO.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Asynch_IO_Impl.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Asynch_Pseudo_Task.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/ATM_Acceptor.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/ATM_Addr.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/ATM_Connector.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/ATM_Params.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/ATM_QoS.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/ATM_Stream.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Atomic_Op.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Atomic_Op_Sparc.c
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Auto_Event.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Barrier.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Base_Thread_Adapter.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Based_Pointer_Repository.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Basic_Stats.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Basic_Types.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Capabilities.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/CDR_Base.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/CDR_Size.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/CDR_Stream.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Cleanup.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Codecs.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Codeset_IBM1047.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Codeset_Registry.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Codeset_Registry_db.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Condition_Recursive_Thread_Mutex.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Condition_Thread_Mutex.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Configuration.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Configuration_Import_Export.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Connection_Recycling_Strategy.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Containers.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Copy_Disabled.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Countdown_Time.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Date_Time.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/DEV.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/DEV_Addr.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/DEV_Connector.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/DEV_IO.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Dev_Poll_Reactor.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Dirent.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Dirent_Selector.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/DLL.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/DLL_Manager.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Dump.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Dynamic.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Dynamic_Message_Strategy.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Dynamic_Service_Base.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Dynamic_Service_Dependency.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Encoding_Converter.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Encoding_Converter_Factory.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Event.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Event_Handler.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/FIFO.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/FIFO_Recv.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/FIFO_Recv_Msg.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/FIFO_Send.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/FIFO_Send_Msg.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/FILE.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/FILE_Addr.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/FILE_Connector.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/FILE_IO.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/File_Lock.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Filecache.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Flag_Manip.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Framework_Component.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Functor.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Functor_String.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Get_Opt.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/gethrtime.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Handle_Ops.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Handle_Set.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Hashable.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/High_Res_Timer.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/ICMP_Socket.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/INET_Addr.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Init_ACE.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/IO_Cntl_Msg.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/IO_SAP.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/IOStream.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/IPC_SAP.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Lib_Find.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Local_Memory_Pool.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Local_Name_Space.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Local_Tokens.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Lock.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Log_Msg.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Log_Msg_Backend.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Log_Msg_Callback.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Log_Msg_IPC.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Log_Msg_NT_Event_Log.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Log_Msg_UNIX_Syslog.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Log_Record.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Logging_Strategy.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/LSOCK.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/LSOCK_Acceptor.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/LSOCK_CODgram.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/LSOCK_Connector.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/LSOCK_Dgram.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/LSOCK_Stream.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Malloc.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Malloc_Allocator.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Manual_Event.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/MEM_Acceptor.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/MEM_Addr.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/MEM_Connector.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/MEM_IO.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Mem_Map.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/MEM_SAP.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/MEM_Stream.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Message_Block.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Message_Queue.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Message_Queue_NT.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Message_Queue_Vx.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Method_Request.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/MMAP_Memory_Pool.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Monitor_Admin.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Monitor_Admin_Manager.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Monitor_Base.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Monitor_Control_Action.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Monitor_Control_Types.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Monitor_Point_Registry.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Monitor_Size.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Msg_WFMO_Reactor.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Multihomed_INET_Addr.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Mutex.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Name_Proxy.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Name_Request_Reply.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Name_Space.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Naming_Context.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Netlink_Addr.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Notification_Queue.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Notification_Strategy.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/NT_Service.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Obchunk.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Object_Manager.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Object_Manager_Base.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_Errno.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_Log_Msg_Attributes.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_main.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_arpa_inet.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_ctype.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_dirent.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_dlfcn.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_errno.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_fcntl.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_math.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_netdb.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_poll.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_pwd.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_regex.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_signal.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_stdio.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_stdlib.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_string.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_strings.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_stropts.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_mman.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_msg.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_resource.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_select.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_sendfile.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_shm.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_socket.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_stat.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_time.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_uio.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_utsname.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_wait.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_Thread.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_time.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_unistd.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_wchar.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_QoS.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_Thread_Adapter.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_TLI.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Pagefile_Memory_Pool.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Parse_Node.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/PI_Malloc.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Ping_Socket.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Pipe.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/POSIX_Asynch_IO.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/POSIX_CB_Proactor.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/POSIX_Proactor.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Priority_Reactor.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Proactor.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Proactor_Impl.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Process.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Process_Manager.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Process_Mutex.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Process_Semaphore.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Profile_Timer.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Reactor.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Reactor_Impl.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Reactor_Notification_Strategy.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Reactor_Timer_Interface.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Read_Buffer.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Recursive_Thread_Mutex.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Recyclable.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Registry.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Registry_Name_Space.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Remote_Name_Space.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Remote_Tokens.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Rtems_init.c
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/RW_Mutex.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/RW_Process_Mutex.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/RW_Thread_Mutex.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Sample_History.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Sbrk_Memory_Pool.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Sched_Params.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Select_Reactor_Base.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Semaphore.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Service_Config.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Service_Gestalt.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Service_Manager.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Service_Object.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Service_Repository.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Service_Types.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Shared_Memory.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Shared_Memory_MM.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Shared_Memory_Pool.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Shared_Memory_SV.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Shared_Object.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Sig_Adapter.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Sig_Handler.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Signal.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_Acceptor.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_CODgram.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Sock_Connect.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_Connector.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_Dgram.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_Dgram_Bcast.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_Dgram_Mcast.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_IO.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_Netlink.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_SEQPACK_Acceptor.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_SEQPACK_Association.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_SEQPACK_Connector.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_Stream.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SPIPE.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SPIPE_Acceptor.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SPIPE_Addr.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SPIPE_Connector.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SPIPE_Stream.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SString.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Stack_Trace.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Stats.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/String_Base_Const.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SUN_Proactor.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SV_Message.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SV_Message_Queue.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SV_Semaphore_Complex.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SV_Semaphore_Simple.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SV_Shared_Memory.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Svc_Conf_Lexer.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Svc_Conf_y.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Synch_Options.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/System_Time.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Task.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Thread.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Thread_Adapter.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Thread_Control.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Thread_Exit.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Thread_Hook.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Thread_Manager.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Thread_Mutex.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Thread_Semaphore.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Throughput_Stats.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Time_Value.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Timeprobe.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/TLI.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/TLI_Acceptor.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/TLI_Connector.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/TLI_Stream.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Token.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Token_Collection.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Token_Invariants.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Token_Manager.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Token_Request_Reply.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/TP_Reactor.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Trace.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/TSS_Adapter.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/TTY_IO.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/UNIX_Addr.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/UPIPE_Acceptor.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/UPIPE_Connector.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/UPIPE_Stream.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/UTF16_Encoding_Converter.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/UTF32_Encoding_Converter.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/UTF8_Encoding_Converter.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/UUID.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/WFMO_Reactor.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/WIN32_Asynch_IO.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/WIN32_Proactor.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/XML_Svc_Conf.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/XTI_ATM_Mcast.cpp
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/ACE.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/ace_wchar.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Activation_Queue.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Active_Map_Manager.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Active_Map_Manager_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Addr.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/ARGV.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Argv_Type_Converter.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Array_Base.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Array_Map.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Asynch_IO_Impl.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/ATM_Acceptor.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/ATM_Addr.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/ATM_Connector.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/ATM_Params.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/ATM_QoS.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/ATM_Stream.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Atomic_Op.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Atomic_Op_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Auto_Event.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Auto_Functor.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Auto_IncDec_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Auto_Ptr.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Barrier.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Base_Thread_Adapter.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Based_Pointer_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Basic_Stats.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Basic_Types.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Bound_Ptr.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Cache_Map_Manager_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Caching_Strategies_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Capabilities.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/CDR_Base.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/CDR_Size.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/CDR_Stream.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Cleanup.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Codeset_Registry.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Condition_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Condition_Thread_Mutex.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Configuration.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Containers.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Containers_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Date_Time.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/DEV.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/DEV_Addr.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/DEV_Connector.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/DEV_IO.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Dev_Poll_Reactor.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Dirent.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Dirent_Selector.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Dynamic.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Dynamic_Message_Strategy.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Dynamic_Service.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Env_Value_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Event.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Event_Handler.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Event_Handler_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/FIFO.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/FIFO_Recv.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/FIFO_Recv_Msg.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/FIFO_Send.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/FIFO_Send_Msg.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/FILE.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/FILE_Addr.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/FILE_Connector.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/FILE_IO.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/File_Lock.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Flag_Manip.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Framework_Component.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Functor.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Functor_String.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Functor_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Get_Opt.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Guard_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Handle_Gobbler.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Handle_Set.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Hash_Cache_Map_Manager_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Hash_Map_Manager_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Hash_Map_With_Allocator_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Hash_Multi_Map_Manager_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Hashable.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/High_Res_Timer.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/INET_Addr.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Intrusive_Auto_Ptr.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Intrusive_List.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Intrusive_List_Node.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/IO_Cntl_Msg.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/IO_SAP.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/IOStream_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/IPC_SAP.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Local_Tokens.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Lock.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Lock_Adapter_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Log_Msg.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Log_Record.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/LSOCK.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/LSOCK_CODgram.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/LSOCK_Connector.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/LSOCK_Dgram.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/LSOCK_Stream.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Malloc.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Malloc_Allocator.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Malloc_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Managed_Object.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Manual_Event.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Map_Manager.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Map_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/MEM_Acceptor.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/MEM_Addr.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/MEM_Connector.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/MEM_IO.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Mem_Map.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/MEM_SAP.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/MEM_Stream.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Message_Block.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Message_Block_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Message_Queue.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Message_Queue_NT.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Message_Queue_Vx.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Metrics_Cache_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/MMAP_Memory_Pool.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Module.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Monitor_Base.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Msg_WFMO_Reactor.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Multihomed_INET_Addr.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Mutex.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Naming_Context.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Netlink_Addr.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Notification_Queue.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Notification_Strategy.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/NT_Service.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Obchunk.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Object_Manager.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Obstack_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_Errno.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_Log_Msg_Attributes.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_arpa_inet.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_ctype.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_dirent.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_dlfcn.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_errno.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_fcntl.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_math.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_netdb.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_poll.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_pwd.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_regex.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_signal.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_stdio.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_stdlib.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_string.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_strings.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_stropts.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_mman.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_msg.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_resource.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_select.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_sendfile.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_shm.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_socket.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_stat.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_time.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_uio.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_sys_wait.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_Thread.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_time.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_unistd.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_wchar.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_NS_wctype.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/OS_TLI.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Pagefile_Memory_Pool.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Pair_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/PI_Malloc.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Ping_Socket.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Pipe.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/POSIX_Proactor.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Proactor.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Process.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Process_Manager.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Process_Mutex.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Process_Semaphore.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Profile_Timer.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/RB_Tree.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Reactor.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Reactor_Notification_Strategy.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Read_Buffer.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Recursive_Thread_Mutex.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Recyclable.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Refcountable_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Refcounted_Auto_Ptr.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Remote_Tokens.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Reverse_Lock_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/RW_Mutex.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/RW_Process_Mutex.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/RW_Thread_Mutex.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Sample_History.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Sched_Params.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Select_Reactor_Base.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Select_Reactor_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Semaphore.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Service_Config.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Service_Gestalt.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Service_Object.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Service_Repository.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Service_Types.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Shared_Memory_MM.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Shared_Memory_SV.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Shared_Object.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Sig_Handler.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Signal.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Singleton.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_Acceptor.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_CODgram.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_Connector.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_Dgram.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_Dgram_Bcast.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_Dgram_Mcast.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_IO.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_Netlink.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_SEQPACK_Acceptor.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_SEQPACK_Association.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_SEQPACK_Connector.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SOCK_Stream.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SPIPE.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SPIPE_Addr.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SPIPE_Connector.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SPIPE_Stream.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SString.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Stats.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Strategies_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Stream.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/String_Base.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SV_Message.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SV_Message_Queue.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SV_Semaphore_Complex.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SV_Semaphore_Simple.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/SV_Shared_Memory.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Task.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Task_Ex_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Task_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Thread.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Thread_Adapter.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Thread_Control.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Thread_Manager.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Thread_Mutex.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Thread_Semaphore.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Time_Value.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Timeprobe.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Timer_Queue_Adapters.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Timer_Queue_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/TLI.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/TLI_Connector.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/TLI_Stream.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Token.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Token_Collection.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Token_Manager.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Token_Request_Reply.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/TP_Reactor.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/TSS_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Typed_SV_Message.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Typed_SV_Message_Queue.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Unbounded_Queue.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Unbounded_Set.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Unbounded_Set_Ex.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/UNIX_Addr.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/UPIPE_Acceptor.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/UPIPE_Connector.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/UPIPE_Stream.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/UTF16_Encoding_Converter.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/UUID.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/Vector_T.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/WFMO_Reactor.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/XTI_ATM_Mcast.inl
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers/ace/ace.rc
)

include_directories( 
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers
)

add_definitions( 
  -DACE_BUILD_DLL
  -DWIN32
  -D_CRT_NONSTDC_NO_DEPRECATE
  -D_CRT_NONSTDC_NO_WARNINGS
  -D_CRT_SECURE_NO_DEPRECATE
  -D_CRT_SECURE_NO_WARNINGS
  -D_WINDOWS
)

add_library(ACE SHARED
  ${ACE_STAT_SRCS}
)

install(TARGETS ACE
  LIBRARY DESTINATION ${LIBS_DIR}
  RUNTIME DESTINATION ${LIBS_DIR}
)